@@ -56,12 +56,12 @@ Scalar SystemCreator::createArgonGasSystem(quint16 sphereCount, Scalar targetTem
 	
 	Scalar boxLength = sphereCountSqrt/8.0*2.5e-9;
 	actionSender->updateBoxSize(Vector3(boxLength, boxLength, boxLength));
-	float radius = 0.017*boxLength;
+	Scalar radius = 0.017*boxLength;
 	std::chrono::system_clock::time_point now = std::chrono::system_clock::now();
 	std::chrono::system_clock::duration timepoint = now.time_since_epoch();
 	std::default_random_engine generator(timepoint.count());
-	std::uniform_real_distribution<float> distribution(-radius/4, radius/4);
-	std::uniform_real_distribution<float> distribution2(0, 1);
+	std::uniform_real_distribution<Scalar> distribution(-radius/4, radius/4);
+	std::uniform_real_distribution<Scalar> distribution2(0, 1);
 	
 	Sphere s;
 	s.radius = 0.5*radius;
@@ -111,7 +111,7 @@ Scalar SystemCreator::createMacroscopicGravitationSystem(quint16 sphereCount)
 	std::chrono::system_clock::time_point now = std::chrono::system_clock::now();
 	std::chrono::system_clock::duration timepoint = now.time_since_epoch();
 	std::default_random_engine generator(timepoint.count());
-	std::uniform_real_distribution<float> distribution(-radius/4, radius/4);
+	std::uniform_real_distribution<Scalar> distribution(-radius/4, radius/4);
 	
 	Sphere s;
 	s.radius = radius;
@@ -142,4 +142,30 @@ Scalar SystemCreator::createMacroscopicGravitationSystem(quint16 sphereCount)
 	actionSender->updateEarthGravity(Vector3(0,0,0));
 	
 	return boxLength;
+}
+
+Scalar SystemCreator::createMacroscopic2DCollisionSystem(quint16 sphereCount)
+{
+	Scalar boxLength = 1;
+	Scalar radius = 0.03*boxLength;
+	std::chrono::system_clock::time_point now = std::chrono::system_clock::now();
+	std::chrono::system_clock::duration timepoint = now.time_since_epoch();
+	std::default_random_engine generator(timepoint.count());
+	std::uniform_real_distribution<Scalar> distribution(0.0f, radius/4);
+	
+	Sphere s;
+	s.radius = 1.5*radius;
+	s.pos(0) = 1.5*radius;
+	s.pos(1) = 1.5*radius;
+	s.pos(2) = 1.5*radius;
+	s.speed.setZero();
+	s.acc.setZero();
+	s.mass = 1;
+	for(unsigned int i = 0; i<64; i++)
+	{
+		actionSender->addSphere();
+		s.pos(1) = 2*radius + 3.5f*radius*(i/8) + distribution(generator);
+		s.pos(0) = 2*radius + 3.5f*radius*(i%8) + distribution(generator);
+		actionSender->updateSphere(i, s);
+	}
 }
