@@ -1,3 +1,5 @@
+* Improved simulated systems and Benchmark client.
+
 SphereSim 2.4.2:
 * Improved simulated system.
 * Improved PKGBUILD build flags.
